--- a/403/error.css
+++ b/403/error.css
@@ -20,5 +20,6 @@
     box-shadow: 5px 5px 13px 0px #9A0000; 
     -webkit-box-shadow: 5px 5px 13px 0px #9A0000; 
     text-shadow: 0px 2px 0px rgba(0, 0, 0, 0.3); 
-    filter: dropshadow(color=#000000, offx=0, offy=2);   
+    filter: dropshadow(color=#000000, offx=0, offy=1);   
+    font-family: Arial, Helvetica, sans-serif;
   }
