--- a/editor/styling.css
+++ b/editor/styling.css
@@ -1,15 +1,27 @@
 div.titleclass {
-    background: #0288D1;
-    color: white;
-    padding: 0px;
-    margin: 0px;
-}
-
-div#s1 {
-    padding: 10px;
-    background: tomato;
-}
-
-body {
-    background: #0288D1;
-}
+    /* background: #0288D1; */
+     color: white;
+     padding: 0px;
+     margin: 0px;
+ }
+ 
+ div#s1 {
+     padding: 10px;
+    /* background: tomato; */
+ }
+ 
+ .input-group {
+     height: -webkit-fill-available
+ }
+ 
+ /*
+ div#s2 {
+     background: #FFEE58
+ }
+ */
+ body {
+     background: #4e54c8;  /* fallback for old browsers */
+     background: -webkit-linear-gradient(to right, #8f94fb, #4e54c8);  /* Chrome 10-25, Safari 5.1-6 */
+     background: linear-gradient(to right, #8f94fb, #4e54c8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ 
+ }
